# BaroBoard

./: .gitignore  .links.json  Cargo.toml  README.md  build.rs  changelog.md
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
config_update/: main.py
config_update/utils/: option_select.py
src/: .links.json  app.rs  links_config.rs  logging.rs  main.rs  my_structs.rs  resources.rs  texture_mgr.rs  window.rs
src/pages/: main.rs  main_page.rs  mod.rs  setting_page.rs  sidebar.rs
src/pages/popups/: config_link.rs  config_save.rs  info.rs  mod.rs
src/pages/popups/link/: config.rs  delete.rs  mod.rs  save.rs
src/utils/: mod.rs  windows_utils.rs
src/window/: event.rs  glow_app.rs  mod.rs
