[package]
name = "BaroBoard"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31.1"
egui_extras = { version = "0.31.1", features = ["all_loaders"] }
rfd = "0.15.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strsim = "0.11.1"
uuid = { version = "1.16.0", features = ["v4"] }
