[package]
name = "BaroBoard"
version = "0.1.3"
edition = "2024"

[dependencies]
egui = "0.31.1"
egui-winit = "0.31.1"
egui_extras = { version = "0.31.1", features = ["all_loaders"] }
egui_glow = { version = "0.31.1", features = ["winit"] }
winit = "0.30.10"
glow = "0.16.0"
glutin = "0.32.3"
glutin-winit = "0.5.0"
trayicon = "0.2.0"

rfd = "0.15.3"
uuid = { version = "1.16.0", features = ["v4"] }
rdev = "0.5.3"
image = "0.25.6"

pinyin = "0.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

strsim = "0.11.1"

tokio = { version = "1.45.0", features = ["full"] }
single-instance = "0.3.3"
md5 = "0.7.0"
env_logger = "0.11.8"
log = "0.4.27"
chrono = { version = "0.4.41", features = ["serde"] }

[target.'cfg(windows)'.dependencies]
systemicons = "0.9.13"

[build-dependencies]
winres = "0.1"
